--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/Caffeine0/Caffeine0.github.io.git" # you code r
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you're going to be!"
+sidebar-about-description: "欢迎来到刘闻钦的博客，还在建设中！"
 sidebar-avatar: /img/about-someone.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
