--- a/_config.yml
+++ b/_config.yml
@@ -62,11 +62,11 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: d18b343dd9c7ca49518a                            #生成的clientID
-  clientSecret: 539e88b8a7feffaddbb553b9c421dfefcbc6eced    #生成的clientSecret
-  repo: klovien.github.io    #仓库名称
-  owner: klovien    #github用户名
-  admin: klovien
+  clientID: 9586e2a781c9ced4106a                            #生成的clientID
+  clientSecret: 2d7265f1f046e72b326248ea1e52a7bfaf339f7a    #生成的clientSecret
+  repo: Caffeine0.github.io    #仓库名称
+  owner: Caffeine0    #github用户名
+  admin: Caffeine0
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
