--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 刘闻钦title
 SEOTitle: 刘闻钦seotitle
 header-img: img/post-bg-desk.jpg
-email: klovien@gmail.com
+email: 2865728841@qq.com
 description: "刘闻钦测试desription"
 keyword: "测试，刘闻钦keyword"
 url: "https://Caffeine0.github.io"          # your host, for absolute URL
@@ -62,7 +62,7 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: 9586e2a781c9ced4106a                            #生成的clientID
+  clientID: 9586e2a781c9ced4106a   #生成的clientID
   clientSecret: 2d7265f1f046e72b326248ea1e52a7bfaf339f7a    #生成的clientSecret
   repo: Caffeine0.github.io    #仓库名称
   owner: Caffeine0    #github用户名
